Add CACHE_BUST argument to Docker build
Add build arguments to Docker configuration

--- a/action.yml
+++ b/action.yml
@@ -23,6 +23,9 @@ permissions:
 runs:
   using: "docker"
   image: "Dockerfile"
+  build:
+    args:
+      CACHE_BUST: ${{ github.run_id }}
 
   # Pass inputs into container:
   env:
