feat: Add optional Google Gemini AI enhancement with graceful fallback
- Replace FLAN-T5 with Google Gemini 1.5 Flash (optional)
- Remove 200MB+ unused ML dependencies (transformers, torch, etc.)
- Add lightweight google-generativeai package
- Enhance generate_impact_statement() with AI-first approach
- Enhance generate_fix_suggestion() with AI-first approach
- Add graceful fallback to pattern-based analysis
- Maintain full backward compatibility (works without API key)
- Add optional google_api_key input to action.yml
- Update README with AI enhancement setup guide
- Add API key handling in entrypoint.sh

Scanner works perfectly without API key using proven pattern-based analysis.
With API key: context-aware AI insights with automatic fallback.

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: "Secure AI Scanner"
-description: "Multi-language security scanner with AI-powered analysis"
+description: "Multi-language security scanner with AI-powered analysis. Scans Python, JavaScript, Java, Go with automated PR comments, policy enforcement, and downloadable reports."
 author: "Srivatsa"
 
 branding:
@@ -20,6 +20,11 @@ inputs:
     description: "Enforce security policy: block push if HIGH severity issues >= 25% threshold"
     required: false
     default: "false"
+
+  google_api_key:
+    description: "Google API key for optional AI-powered analysis (uses pattern-based fallback if not provided)"
+    required: false
+    default: ""
 
 permissions:
   contents: read
