Introduce CACHE_BUST for caching control
Add CACHE_BUST environment variable to action.

--- a/action.yml
+++ b/action.yml
@@ -35,6 +35,8 @@ permissions:
 runs:
   using: "docker"
   image: "Dockerfile"
+  env:
+      CACHE_BUST: ${{ github.run_id }}
 
   args:
     - ${{ inputs.scan_path }}
