Revise action description for clarity
Updated the description to emphasize AI capabilities.

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: "Secure AI Scanner"
-description: "Multi-language security scanner with AI-powered analysis. Scans Python, JavaScript, Java, Go with automated PR comments, policy enforcement, and downloadable reports."
+description: "AI-powered Multi-language security scanner 
 author: "Srivatsa"
 
 branding:
