--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: "Secure AI Scanner"
-description: "AI-powered Multi-language security scanner 
+description: "AI-powered Multi-language security scanner"
 author: "Srivatsa"
 
 branding:
